@@ -61,7 +61,7 @@ class VectorTypedParameterHandler : public ParameterHandler
 				
 		virtual IECore::ParameterPtr parameter();
 		virtual IECore::ConstParameterPtr parameter() const;
-		virtual Gaffer::PlugPtr setupPlug( GraphComponentPtr plugParent, Plug::Direction direction=Plug::In );
+		virtual Gaffer::PlugPtr setupPlug( GraphComponent *plugParent, Plug::Direction direction=Plug::In );
 		virtual Gaffer::PlugPtr plug();
 		virtual Gaffer::ConstPlugPtr plug() const;
 		virtual void setParameterValue();
