@@ -69,7 +69,7 @@ IECore::ConstParameterPtr NumericParameterHandler<T>::parameter() const
 }
 
 template<typename T>
-Gaffer::PlugPtr NumericParameterHandler<T>::setupPlug( GraphComponentPtr plugParent, Plug::Direction direction )
+Gaffer::PlugPtr NumericParameterHandler<T>::setupPlug( GraphComponent *plugParent, Plug::Direction direction )
 {
 	m_plug = plugParent->getChild<PlugType>( m_parameter->name() );
 	if( !m_plug || m_plug->direction()!=direction )
