@@ -69,7 +69,7 @@ IECore::ConstParameterPtr TypedParameterHandler<T>::parameter() const
 }
 
 template<typename T>
-Gaffer::PlugPtr TypedParameterHandler<T>::setupPlug( GraphComponentPtr plugParent, Plug::Direction direction )
+Gaffer::PlugPtr TypedParameterHandler<T>::setupPlug( GraphComponent *plugParent, Plug::Direction direction )
 {
 	m_plug = plugParent->getChild<PlugType>( m_parameter->name() );
 	if( !m_plug || m_plug->direction()!=direction )
