@@ -68,7 +68,7 @@ IECore::ConstParameterPtr VectorTypedParameterHandler<T>::parameter() const
 }
 
 template<typename T>
-Gaffer::PlugPtr VectorTypedParameterHandler<T>::setupPlug( GraphComponentPtr plugParent, Plug::Direction direction )
+Gaffer::PlugPtr VectorTypedParameterHandler<T>::setupPlug( GraphComponent *plugParent, Plug::Direction direction )
 {
 	m_plug = plugParent->getChild<PlugType>( m_parameter->name() );
 	if( !m_plug || m_plug->direction()!=direction )
